Generified most map calls, suppressed warnings of calls/casts that cannot be checked